# pathreview

./: .env.example  .gitignore  .pre-commit-config.yaml  =0.29.0  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  test_coverage.md
.github/workflows/: ci.yml  eval.yml
agent/: error_handling.py  orchestrator.py
agent/memory/: context_manager.py  session_store.py
agent/tools/: base.py  github_tool.py  market_analyzer.py  readme_scorer.py  skill_extractor.py  tech_detector.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_error_message_to_reviews.py
api/: main.py
api/middleware/: auth.py  request_id.py
api/routes/: auth.py  health.py  profiles.py  reviews.py
api/schemas/: profile.py  review.py  user.py
core/: config.py  database.py  logging.py  security.py
core/models/: __init__.py  ingested_source.py  profile.py  review.py  user.py
core/services/: profile_service.py  review_service.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  SETUP.md
docs/adr/: 001-chunking-strategy.md  002-embedding-model.md  003-agent-orchestration.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/: App.tsx
ingestion/: pipeline.py
ingestion/chunking/: base.py  semantic_chunker.py  strategy_selector.py  structural_chunker.py
ingestion/embeddings/: batch_processor.py  provider.py
ingestion/parsers/: base.py  readme_parser.py  repo_analyzer.py  resume_parser.py  skill_extractor.py
rag/evaluator/: eval_suite.py  faithfulness_checker.py  relevance_scorer.py
rag/generator/: output_parser.py  prompt_templates.py  review_generator.py
rag/retriever/: hybrid.py  keyword_search.py  vector_store.py
safety/: bias_detector.py  content_filter.py  monitoring.py  pii_scrubber.py  prompt_defense.py  rate_limiter.py
scripts/: issues_manifest.json  run_evals.py  seed_db.py  seed_issues.py
tests/: conftest.py
tests/unit/: test_batch_processor.py  test_bias_detector.py  test_faithfulness_checker.py  test_keyword_search.py  test_llm_provider_contract.py  (+15 more)
(+19 files in other folders)
